--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=friendly_visvesvaraya
+DB_DATABASE=nrw
 DB_USERNAME=root
-DB_PASSWORD=CcrdlbUEYKfW32E2rACCgeUP
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
